src/test/ui/error-codes/E0601.stderr
error[E0601]: `main` function not found in crate `E0601`
  --> $DIR/E0601.rs:1:37
   |
LL |
   |                                     ^
   |
help: define a function named `main` at the crate root
   |
LL |
   |                                     ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0601`.
