src/test/ui/error-codes/E0601.rs
// Test for main function not found.
